alterações em aula

--- a/SGE/Views/Alunos/Edit.cshtml
+++ b/SGE/Views/Alunos/Edit.cshtml
@@ -12,7 +12,7 @@
 @if (ViewData["Erro"] != null)
 {
     <div class="row">
-        <div class="col-md-4 text-center">
+        <div class="col-md-4 text-center">2
             <div class="alert alert-danger">
                 <strong> @ViewData["Erro"] </strong>
 
