--- a/SGE/Views/Alunos/Index.cshtml
+++ b/SGE/Views/Alunos/Index.cshtml
@@ -21,6 +21,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.UrlFoto)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Matricula)
             </th>
             <th>
@@ -33,40 +36,10 @@
                 @Html.DisplayNameFor(model => model.Celular)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Logradouro)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Numero)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Cidade)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Estado)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CEP)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Senha)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.DataNascimento)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.CadAtivo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DataCadastro)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CadInativo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TipoUsuario)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UrlFoto)
             </th>
             <th></th>
         </tr>
@@ -75,6 +48,9 @@
         @foreach (var item in Model)
         {
             <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UrlFoto)
+                </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Matricula)
                 </td>
@@ -88,44 +64,14 @@
                     @Html.DisplayFor(modelItem => item.Celular)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Logradouro)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Numero)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Cidade)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Estado)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CEP)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Senha)
-                </td>
-                <td>
                     @Html.DisplayFor(modelItem => item.DataNascimento)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.CadAtivo)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.DataCadastro)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CadInativo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TipoUsuario.TipoUsuarioId)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.UrlFoto)
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.AlunoId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.AlunoId">Details</a> |
+                    <a asp-action="Edit" asp-route-id="@item.AlunoId">Edit</a> 
+                    <a asp-action="Details" asp-route-id="@item.AlunoId">Details</a> 
                     <a asp-action="Delete" asp-route-id="@item.AlunoId">Delete</a>
                 </td>
             </tr>
