--- a/SGE/Views/Alunos/Index.cshtml
+++ b/SGE/Views/Alunos/Index.cshtml
@@ -49,7 +49,20 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.UrlFoto)
+                    @{
+                        //@{} para colocar código de back no front
+                        // Verifica se a imagem existe
+                        var filePath = Directory.GetCurrentDirectory() + "\\Data\\Content\\Photo\\" + item.UrlFoto;
+                        if (System.IO.File.Exists(filePath))
+                    {
+                    // Carrega a imagem em memória
+                    var imageBytes = await System.IO.File.ReadAllBytesAsync(filePath);
+                    var imageBase64 = Convert.ToBase64String(imageBytes);
+
+                    // Exibe a imagem na view
+                    <img src="data:image/png;base64,@imageBase64" alt="Foto do Perfil" height="50" width="50" />
+                    }
+                    }
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Matricula)
