--- a/SGE/Views/Alunos/Index.cshtml
+++ b/SGE/Views/Alunos/Index.cshtml
@@ -24,10 +24,10 @@
                 @Html.DisplayNameFor(model => model.UrlFoto)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Matricula)
+                @Html.DisplayNameFor(model => model.AlunoNome)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.AlunoNome)
+                @Html.DisplayNameFor(model => model.Matricula)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Email)
@@ -50,25 +50,26 @@
             <tr>
                 <td>
                     @{
-                        //@{} para colocar código de back no front
                         // Verifica se a imagem existe
-                        var filePath = Directory.GetCurrentDirectory() + "\\Data\\Content\\Photo\\" + item.UrlFoto;
+                        var filePath = Directory.GetCurrentDirectory() + "\\Data\\Content\\Photo\\" +
+                        item.UrlFoto;
                         if (System.IO.File.Exists(filePath))
-                    {
-                    // Carrega a imagem em memória
-                    var imageBytes = await System.IO.File.ReadAllBytesAsync(filePath);
-                    var imageBase64 = Convert.ToBase64String(imageBytes);
+                        {
+                            // Carrega a imagem em memória
+                            var imageBytes = await System.IO.File.ReadAllBytesAsync(filePath);
+                            var imageBase64 = Convert.ToBase64String(imageBytes);
 
-                    // Exibe a imagem na view
-                    <img src="data:image/png;base64,@imageBase64" alt="Foto do Perfil" height="50" width="50" />
+                            // Exibe a imagem na view
+                            <img src="data:image/png;base64,@imageBase64"
+                                 alt="Foto do Perfil" height="50" />
+                        }
                     }
-                    }
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Matricula)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.AlunoNome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Matricula)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Email)
@@ -83,8 +84,8 @@
                     @Html.DisplayFor(modelItem => item.CadAtivo)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.AlunoId">Edit</a> 
-                    <a asp-action="Details" asp-route-id="@item.AlunoId">Details</a> 
+                    <a asp-action="Edit" asp-route-id="@item.AlunoId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.AlunoId">Details</a> |
                     <a asp-action="Delete" asp-route-id="@item.AlunoId">Delete</a>
                 </td>
             </tr>
