--- a/SGE/Views/Ocorrencias/Create.cshtml
+++ b/SGE/Views/Ocorrencias/Create.cshtml
@@ -22,7 +22,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="DataOcorrencia" class="control-label"></label>
-                <input asp-for="DataOcorrencia" class="form-control" />
+                <input asp-for="DataOcorrencia" class="form-control" />  @*value="@DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss")*@
                 <span asp-validation-for="DataOcorrencia" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -32,12 +32,14 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="CadAtivo" /> @Html.DisplayNameFor(model => model.CadAtivo)
+                    @* <input class="form-check-input" asp-for="CadAtivo" /> @Html.DisplayNameFor(model => model.CadAtivo) *@
+
+                    <input class="form-check-input" type="hidden" asp-for="CadAtivo" value="true" />
                 </label>
             </div>
             <div class="form-group">
                 <label asp-for="CadInativo" class="control-label"></label>
-                <input asp-for="CadInativo" class="form-control" />
+                <input asp-for="CadInativo" class="form-control" /> @*type hidden, nao precisa aparecer*@
                 <span asp-validation-for="CadInativo" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
@@ -54,11 +56,11 @@
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
-    </div>
+    </div> 
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-dark" asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
