--- a/SGE/Views/Salas/Create.cshtml
+++ b/SGE/Views/Salas/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Nova Sala</h1>
 
-<h4>Sala</h4>
+<h4>TESTE SALAS</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="CadInativo" class="control-label"></label>
-                <input asp-for="CadInativo" class="form-control" />
+                <input asp-for="CadInativo" class="form-control"/>
                 <span asp-validation-for="CadInativo" class="text-danger"></span>
             </div>
             <div class="form-group">
