--- a/SGE/Views/Usuarios/Edit.cshtml
+++ b/SGE/Views/Usuarios/Edit.cshtml
@@ -51,7 +51,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="DataCadastro" class="control-label"></label>
-                <input asp-for="DataCadastro" class="form-control" />
+                <input asp-for="DataCadastro" class="form-control" readonly />
                 <span asp-validation-for="DataCadastro" class="text-danger"></span>
             </div>
             <div class="form-group">
