--- a/SGE/Views/Ocorrencias/Create.cshtml
+++ b/SGE/Views/Ocorrencias/Create.cshtml
@@ -22,7 +22,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="DataOcorrencia" class="control-label"></label>
-                <input asp-for="DataOcorrencia" class="form-control" />  @*value="@DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss")*@
+                <input asp-for="DataOcorrencia" class="form-control" value="@DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss")" />
                 <span asp-validation-for="DataOcorrencia" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -32,31 +32,31 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    @* <input class="form-check-input" asp-for="CadAtivo" /> @Html.DisplayNameFor(model => model.CadAtivo) *@
 
-                    <input class="form-check-input" type="hidden" asp-for="CadAtivo" value="true" />
+
+                    <input class="form-check-input" type="hidden" asp-for="CadAtivo" value="true" /> @Html.DisplayNameFor(model => model.CadAtivo)
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="CadInativo" class="control-label"></label>
-                <input asp-for="CadInativo" class="form-control" /> @*type hidden, nao precisa aparecer*@
-                <span asp-validation-for="CadInativo" class="text-danger"></span>
+
+                <input asp-for="CadInativo" class="form-control" type="hidden" /> @*type hidden, nao precisa aparecer*@
+
             </div>
             <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Finalizado" /> @Html.DisplayNameFor(model => model.Finalizado)
-                </label>
+
+                <input class="form-check-input" asp-for="Finalizado" type="hidden" /> @Html.DisplayNameFor(model => model.Finalizado)
+
             </div>
             <div class="form-group">
-                <label asp-for="DataFinalizado" class="control-label"></label>
-                <input asp-for="DataFinalizado" class="form-control" />
-                <span asp-validation-for="DataFinalizado" class="text-danger"></span>
+
+                <input asp-for="DataFinalizado" class="form-control" type="hidden" />
+
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
-    </div> 
+    </div>
 </div>
 
 <div>
