--- a/SGE/Views/Ocorrencias/Index.cshtml
+++ b/SGE/Views/Ocorrencias/Index.cshtml
@@ -40,38 +40,39 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TipoOcorrencia.TipoOcorrenciaId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Usuario.UsuarioId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DataOcorrencia)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Descricao)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CadAtivo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CadInativo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Finalizado)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DataFinalizado)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.OcorrenciaId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.OcorrenciaId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.OcorrenciaId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TipoOcorrencia.TipoOcorrenciaId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Usuario.UsuarioId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DataOcorrencia)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Descricao)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CadAtivo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CadInativo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Finalizado)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DataFinalizado)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.OcorrenciaId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.OcorrenciaId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.OcorrenciaId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
