--- a/SGE/Views/Ocorrencias/ListaOcorrencias.cshtml
+++ b/SGE/Views/Ocorrencias/ListaOcorrencias.cshtml
@@ -176,7 +176,7 @@
                                         </span>
                                     }
                                 <td>
-                                    <a asp-action="Responder" asp-route-id="@item.OcorrenciaId" class="btn btn-info">Responder</a>
+                                    <a asp-action="Edit" asp-route-id="@item.OcorrenciaId" class="btn btn-info">Editar</a>
                                     <a asp-action="Delete" asp-route-id="@item.OcorrenciaId" class="btn btn-danger">Cancelar</a>
                                 </td>
                             </tr>
