--- a/SGE/Views/Ocorrencias/Edit.cshtml
+++ b/SGE/Views/Ocorrencias/Edit.cshtml
@@ -34,28 +34,29 @@
                 <span asp-validation-for="Descricao" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="CadAtivo" /> @Html.DisplayNameFor(model => model.CadAtivo)
-                </label>
-            </div>
-            <div class="form-group">
-                <label asp-for="CadInativo" class="control-label"></label>
-                <input asp-for="CadInativo" class="form-control" />
-                <span asp-validation-for="CadInativo" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Finalizado" /> @Html.DisplayNameFor(model => model.Finalizado)
-                </label>
-            </div>
-            <div class="form-group">
-                <label asp-for="DataFinalizado" class="control-label"></label>
-                <input asp-for="DataFinalizado" class="form-control" />
-                <span asp-validation-for="DataFinalizado" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
+                <div class="form-group form-check">
+                    <label class="form-check-label">
+                        <input class="form-check-input" asp-for="CadAtivo" type="hidden" /> @Html.DisplayNameFor(model => model.CadAtivo)
+                    </label>
+                </div>
+                <div class="form-group">
+
+                    <input asp-for="CadInativo" class="form-control" type="hidden" />
+
+                </div>
+                <div class="form-group">
+
+                    <input class="form-check-input" asp-for="Finalizado" type="hidden" /> @Html.DisplayNameFor(model => model.Finalizado)
+
+                </div>
+                <div class="form-group">
+                    <label asp-for="DataFinalizado" class="control-label"></label>
+                    <input asp-for="DataFinalizado" class="form-control" type="hidden" />
+                    <span asp-validation-for="DataFinalizado" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-primary" />
+                </div>
         </form>
     </div>
 </div>
@@ -65,5 +66,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
