--- a/SGE/Views/Ocorrencias/ListaOcorrencias.cshtml
+++ b/SGE/Views/Ocorrencias/ListaOcorrencias.cshtml
@@ -8,10 +8,11 @@
     {
         ViewData["Erro"] = "Não foram encontrados registros para a busca realizada.";
     }
-    if (@Model.Count() > 0)
+    if (Model.Count() > 0)
     {
-        @Model.OrderBy(d => d.DataOcorrencia)
+        Model.OrderBy(d => d.DataOcorrencia);
     }
+
 }
 
 <h1>Boletim de Ocorrências</h1>
@@ -176,7 +177,7 @@
                                         </span>
                                     }
                                 <td>
-                                    <a asp-action="Responder" asp-route-id="@item.OcorrenciaId" class="btn btn-info">Responder</a>
+                                    <a asp-action="Edit" asp-route-id="@item.OcorrenciaId" class="btn btn-info">Editar</a>
                                     <a asp-action="Delete" asp-route-id="@item.OcorrenciaId" class="btn btn-danger">Cancelar</a>
                                 </td>
                             </tr>
