--- a/SGE/Views/TiposOcorrencia/Create.cshtml
+++ b/SGE/Views/TiposOcorrencia/Create.cshtml
@@ -35,7 +35,7 @@
 </div>
 
 <div>
-    <a asp-action="ListaOcorrencias">Back to List</a>
+    <a asp-action="index">Back to List</a>
 </div>
 
 @section Scripts {
