Alterações na validação de email

--- a/SGE/Views/Alunos/Create.cshtml
+++ b/SGE/Views/Alunos/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Create";
-    Guid TipoUser = (Guid)@ViewData["TipoUsuarioId"];
+    Guid TipoUser = (Guid)ViewData["TipoUsuarioId"];
 }
 
 <h1>Create</h1>
