--- a/SGE/Views/Alunos/Edit.cshtml
+++ b/SGE/Views/Alunos/Edit.cshtml
@@ -104,7 +104,7 @@
             </div>
             <div class="form-group form-switch mt-3">
                 <label class="form-check-label">
-                    <input class="form-check-input" type="checkbox" asp-for="CadAtivo" /> @Html.DisplayNameFor(model => model.CadAtivo)
+                    <input class="form-check-input" type="checkbox" value="@Model.CadAtivo" asp-for="CadAtivo" /> @Html.DisplayNameFor(model => model.CadAtivo)
                 </label>
             </div>
             <div class="form-group">
