--- a/SGE/wwwroot/css/site.css
+++ b/SGE/wwwroot/css/site.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 html {
     font-size: 14px;
 }
@@ -19,4 +21,26 @@ html {
 
 body {
     margin-bottom: 60px;
+    font-family: "Montserrat", sans-serif;
+}
+
+.button {
+    width: 124.3px;
+    height: 36px;
+    border-radius: 0.3em;
+    border: none;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: white;
+    color: #F6D524;
+    margin-left: 22em;
+    margin-top: 2.3em;
+}
+
+.card-header {
+    display: flex;
+    color: #FFFFFF;
+}
+
+.card-subtitle {
+    color: #F6D524;
 }
