--- a/SGE/Views/Ocorrencias/ListaOcorrencias.cshtml
+++ b/SGE/Views/Ocorrencias/ListaOcorrencias.cshtml
@@ -177,7 +177,7 @@
                                         </span>
                                     }
                                 <td>
-                                    <a asp-action="Edit" asp-route-id="@item.OcorrenciaId" class="btn btn-info">Editar</a>
+                                    <a asp-action="EditarOcorrencia" asp-route-id="@item.OcorrenciaId" class="btn btn-info">Editar</a>
                                     <a asp-action="Delete" asp-route-id="@item.OcorrenciaId" class="btn btn-danger">Cancelar</a>
                                 </td>
                             </tr>
