--- a/SGE/Views/Home/Login.cshtml
+++ b/SGE/Views/Home/Login.cshtml
@@ -15,29 +15,30 @@
 	</div>
 }
 
-
-<div class="container">
-	<div class="row d-flex justify-content-center align-items-center mt-5">
-		<div class="col-md-8">
-			<div class="card-body">
-				<div class="card-header">
-					<h4 class="card-title mx-4">Para continuar, acesse a sua &nbsp</h4>
-					<h4 class="card-subtitle">conta educacional.</h4>
-				</div>
+<div class="cardlogin">
+	<div class="container">
+		<div class="row d-flex justify-content-center align-items-center mt-5">
+			<div class="col-md-8">
 				<div class="card-body">
-					<form asp-action="Login" method="post">
-						<div class="form-group mt-4">
-							<label for="inEmail" class="control-label mx-2">E-mail</label>
-							<input name="inEmail" id="inEmail" type="email" class="form-control border-white" />
-						</div>
-						<div class="form-group mt-4">
-							<label for="inSenha" class="control-label mt-lg-3 mx-2 ">Senha</label>
-							<input name="inSenha" id="inSenha" type="password" class="form-control border-white" />
-						</div>
-						<div class="mt-3">
-							<input type="submit" value="Login" class="button" />
-						</div>
-					</form>
+					<div class="card-header">
+						<h4 class="card-title mx-4">Para continuar, acesse a sua</h4>
+						<h4 class="card-subtitle">conta educacional.</h4>
+					</div>
+					<div class="card-body">
+						<form asp-action="Login" method="post">
+							<div class="form-group mt-4">
+								<label for="inEmail" class="control-label mx-2">E-mail</label>
+								<input name="inEmail" id="inEmail" type="email" class="form-control border-white" />
+							</div>
+							<div class="form-group mt-4">
+								<label for="inSenha" class="control-label mt-lg-3 mx-2 ">Senha</label>
+								<input name="inSenha" id="inSenha" type="password" class="form-control border-white" />
+							</div>
+							<div class="mt-3">
+								<input type="submit" value="Login" class="button" />
+							</div>
+						</form>
+					</div>
 				</div>
 			</div>
 		</div>
