--- a/SGE/wwwroot/css/site.css
+++ b/SGE/wwwroot/css/site.css
@@ -32,15 +32,26 @@ body {
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     background-color: white;
     color: #F6D524;
-    margin-left: 22em;
+    margin-left: 18em;
     margin-top: 2.3em;
 }
 
 .card-header {
     display: flex;
     color: #FFFFFF;
+    margin-top: 5.8em;
 }
 
 .card-subtitle {
     color: #F6D524;
+}
+
+.cardlogin {
+    margin-left: 5.4em;
+    margin-top: 9em;
+    width: 1100px;
+    height: 600px;
+    border-radius: 0.4em;
+    background-color: rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
