View do Home concluído (falta anexar imagem). View de Usuarios iniciada.

--- a/SGE/Views/Usuarios/Index.cshtml
+++ b/SGE/Views/Usuarios/Index.cshtml
@@ -6,6 +6,44 @@
 
 <h1>Index</h1>
 
+<div>
+    <div>
+        <div>
+            img
+        </div>
+        <div>
+            <div class="d-flex row align-items-center">
+                <h1 class="col-2">Usuários</h1>
+                <hr class="col-2" />
+            </div>
+            <p>Visualize quem tem acesso à ferramenta SGE</p>
+        </div>
+    </div>
+    <div class="d-flex row">
+        <div class="col-5">
+            <div class="d-flex col-4 justify-content-between">
+                <h2>Tipos de Usuários</h2>
+                <button style="height:50px; width:50px;">+</button>
+            </div>
+            <div>
+                tabela
+            </div>
+        </div>
+        <div class="col-7">
+            <div class="d-flex col-4 justify-content-between">
+                <h2>Usuários Cadastrados</h2>
+                <button style="height:50px; width:50px;">+</button>
+            </div>
+            <div>
+                Pesquisa
+            </div>
+            <div>
+                Tabela
+            </div>
+        </div>
+    </div>
+</div>
+
 <p>
     <a asp-action="Create">Create New</a>
 </p>
