--- a/SGE/wwwroot/css/site.css
+++ b/SGE/wwwroot/css/site.css
@@ -20,3 +20,27 @@ html {
 body {
     margin-bottom: 60px;
 }
+
+/*Página Home*/
+
+.buttonAzul {
+    border: 4px solid #2E75D3;
+    border-radius: 20px;
+    background: none;
+    
+    color: #2E75D3;
+    text-align: center;
+}
+
+    .buttonAzul:hover {
+        background: #2E75D3;
+        color: #fff;
+    }
+
+.textoP {
+    font-size: 24px;
+}
+
+.textoH1{
+    font-size:50px;
+}
