--- a/SGE/Views/Usuarios/Edit.cshtml
+++ b/SGE/Views/Usuarios/Edit.cshtml
@@ -39,6 +39,11 @@
                 <input asp-for="Senha" class="form-control" />
                 <span asp-validation-for="Senha" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label for="ConfirmeSenha" class="control-label">Confirme a Senha</label>
+                <input id="ConfirmeSenha" value="@Model.Senha" name="ConfirmeSenha" class="form-control" />
+            </div>
             <div class="form-group">
                 <label asp-for="Celular" class="control-label"></label>
                 <input asp-for="Celular" class="form-control" />
