--- a/SGE/wwwroot/css/site.css
+++ b/SGE/wwwroot/css/site.css
@@ -20,38 +20,56 @@ html {
 }
 
 body {
-    margin-bottom: 60px;
     font-family: "Montserrat", sans-serif;
 }
 
-.button {
-    width: 124.3px;
-    height: 36px;
-    border-radius: 0.3em;
-    border: none;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    background-color: white;
-    color: #F6D524;
-    margin-left: 18em;
-    margin-top: 2.3em;
-}
-
-.card-header {
+.cardLogin {
     display: flex;
-    color: #FFFFFF;
-    margin-top: 5.8em;
-}
-
-.card-subtitle {
-    color: #F6D524;
-}
-
-.cardlogin {
-    margin-left: 5.4em;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 20px;
+    background-color: rgba(255, 255, 255, 0.3);
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    opacity: 1;
     margin-top: 9em;
-    width: 1100px;
-    height: 600px;
-    border-radius: 0.4em;
-    background-color: rgba(0, 0, 0, 0.1);
+    padding: 0em 4em;
+}
+
+.inicioText {
+    display: flex;
+    margin: 4em 0em;
+}
+
+.inputs {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 900px;
+}
+
+    .inputs div {
+        display: flex;
+        flex-direction: column;
+        margin: 2em 0em;
+    }
+
+.inputStyle input {
+    border-radius: 2px;
+    border: 1.4px solid white;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: rgba(255, 255, 255, 0.0);
+    padding: 1em 0.2em;
+    color: white;
+    font-size: 20px;
+}
+
+.btnn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.Background {
+    background: url('../img/psychedelic-paper-shapes-with-copy-space.jpg') center/cover no-repeat;
 }
