alterações nas cores login

--- a/SGE/Views/Home/Login.cshtml
+++ b/SGE/Views/Home/Login.cshtml
@@ -17,7 +17,7 @@
 <div class="cardLogin">
 	<div class="inicioText">
 		<h4 style="font-size:32px; color:white; font-weight: 600;">Para continuar, acesse a sua </h4>
-		<h4 style="font-size:32px; color:#F6D524; font-weight: 600;">&nbsp; conta educacional.</h4>
+		<h4 style="font-size:32px; color:#2E75D3; font-weight: 600;">&nbsp; conta educacional.</h4>
 	</div>
 	<div class="inputs">
 		<form asp-action="Login" method="post">
@@ -30,7 +30,7 @@
 				<input name="inSenha" id="inSenha" type="password" class="input" />
 			</div>
 			<div class="btnn">
-				<input type="submit" value="Login" class="button" style="margin-top:3em; width:200px; height:55px; font-size: 24px; color:#F6D524; background: white; border-radius:0.2em; border:none;" />
+				<input type="submit" value="Login" class="button" style="margin-top:3em; width:200px; height:55px; font-size: 24px; color:#FFFF; background: #2E75D3; border-radius:0.2em; border:none;" />
 			</div>
 		</form>
 	</div>
