--- a/SGE/Views/Shared/_Layout.cshtml
+++ b/SGE/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 </head>
 <body class="bg-white">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white mx-5">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white mx-5 mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand fw-bolder" style="color:#2E75D3; font-size: 25px" asp-area="" asp-controller="Home" asp-action="Index">AppEscola</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
