pausa para almoço

--- a/SGE/Views/Ocorrencias/ListaOcorrencias.cshtml
+++ b/SGE/Views/Ocorrencias/ListaOcorrencias.cshtml
@@ -16,6 +16,9 @@
 }
 
 <h1>Boletim de Ocorrências</h1>
+<p>
+    <a asp-controller="TiposOcorrencia" asp-action="Create">Tipos </a>
+</p>
 <div class="container">
     @if (ViewData["Erro"] != null)
     {
