--- a/SGE/Views/Usuarios/Index.cshtml
+++ b/SGE/Views/Usuarios/Index.cshtml
@@ -5,11 +5,15 @@
 }
 
 <h1>Index</h1>
+<p>
+    <a asp-controller="TiposUsuario" asp-action="Create">Tipos </a>
+</p>
 
 <p>
     <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
+
     <thead>
         <tr>
             <th>
