--- a/SGE/Views/Alunos/Index.cshtml
+++ b/SGE/Views/Alunos/Index.cshtml
@@ -19,6 +19,7 @@
 </p>
 <table class="table">
     <thead>
+
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.UrlFoto)
@@ -40,6 +41,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.CadAtivo)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CadInativo)
             </th>
             <th></th>
         </tr>
@@ -83,6 +87,10 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.CadAtivo)
                 </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CadInativo)
+                </td>
+
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.AlunoId">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.AlunoId">Details</a> |
