--- a/SGE/Views/AlunosTurma/Index.cshtml
+++ b/SGE/Views/AlunosTurma/Index.cshtml
@@ -5,6 +5,9 @@
 }
 
 <h1>Index</h1>
+<p>
+    <a asp-controller="Turma" asp-action="Create">Tipos </a>
+</p>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -22,20 +25,21 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Aluno.AlunoId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Turma.TurmaId)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.AlunoTurmaId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.AlunoTurmaId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.AlunoTurmaId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Aluno.AlunoId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Turma.TurmaId)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.AlunoTurmaId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.AlunoTurmaId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.AlunoTurmaId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
