ultima alteração no login

--- a/SGE/Views/Home/Login.cshtml
+++ b/SGE/Views/Home/Login.cshtml
@@ -16,21 +16,21 @@
 
 <div class="cardLogin">
 	<div class="inicioText">
-		<h4 style="font-size:32px; color:white; font-weight: 600;">Para continuar, acesse a sua </h4>
-		<h4 style="font-size:32px; color:#2E75D3; font-weight: 600;">&nbsp; conta educacional.</h4>
+		<h5 style="font-size:22px; color:white; font-weight: 600;">Para continuar, acesse a sua </h5>
+		<h5 style="font-size:22px; color:#F6D524; font-weight: 600;">&nbsp; conta educacional.</h5>
 	</div>
 	<div class="inputs">
 		<form asp-action="Login" method="post">
 			<div class="inputStyle">
-				<label style="font-size:24px; color:white; font-weight:600;" for="inEmail">E-mail</label>
+				<label style="font-size:15px; color:white; font-weight:600;" for="inEmail">E-mail</label>
 				<input name="inEmail" id="inEmail" type="email" class="input" />
 			</div>
 			<div class="inputStyle">
-				<label style="font-size:24px; color:white; font-weight:600;" for="inSenha">Senha</label>
+				<label style="font-size:15px; color:white; font-weight:600;" for="inSenha">Senha</label>
 				<input name="inSenha" id="inSenha" type="password" class="input" />
 			</div>
 			<div class="btnn">
-				<input type="submit" value="Login" class="button" style="margin-top:3em; width:200px; height:55px; font-size: 24px; color:#FFFF; background: #2E75D3; border-radius:0.2em; border:none;" />
+				<input type="submit" value="Login" class="button" style="margin-top:1.5em; width:200px; height:55px; font-size: 24px; color:#F6D524; background: #FFFF; border-radius:0.2em; border:none;" />
 			</div>
 		</form>
 	</div>
