--- a/SGE/Views/Shared/_Layout.cshtml
+++ b/SGE/Views/Shared/_Layout.cshtml
@@ -65,7 +65,7 @@
 			</nav>
 		</header>
 
-		<footer class="border-top footer text-muted">
+		<footer id="rodape" class="border-top footer text-muted">
 			<div class="d-flex justify-content-center align-items-center">
 				&copy; 2024 - SGE - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
 			</div>
